# meetingsdk-linux-raw-recording-sample

./: .env  .gitignore  Dockerfile
demo/: AuthServiceEventListener.cpp  CMakeLists.txt  CMakeLists.txt.new  Log.cpp  Log.h  MeetingReminderEventListener.cpp  MeetingReminderEventListener.h  MeetingServiceEventListener.cpp  MeetingServiceEventListener.h  NetworkConnectionHandler.cpp  NetworkConnectionHandler.h  Serialisation.h  ZoomSDKAudioRawData.cpp  ZoomSDKRenderer.cpp  ZoomSDKRenderer.h  ZoomSDKVideoSource.cpp  ZoomSDKVideoSource.h  ZoomSDKVirtualAudioMicEvent.cpp  ZoomSDKVirtualAudioMicEvent.h  config-txt-update  config.txt  meeting_sdk_demo.cpp
src/: index.js
